--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
-    "log4js": "^6.4.1"
+    "log4js": "^6.4.1",
+    "serve-static": "^1.14.2"
   }
 }
