--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.17.3",
     "log4js": "^6.4.1",
-    "serve-static": "^1.14.2"
+    "serve-static": "^1.14.2",
+    "ws": "^8.5.0"
   }
 }
