--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
+    "crypto": "^1.0.1",
     "express": "^4.17.3",
     "log4js": "^6.4.1",
     "mysql2": "^2.3.3",
